# pdf-english-fiction-annotator

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  Start-Annotator.bat  _commit_msg.txt  app_launcher.py  pyproject.toml  render.yaml  render_test_log.txt  requirements.txt
.github/workflows/: build-windows.yml  deploy-hf-space.yml  pages.yml
.huggingface/: README.md
annotator/: __init__.py  cli.py  config.py  dictionary.py  gui.py  literary_translation.py  nltk_setup.py  pipeline.py  renderer.py  selector.py  split_merge.py
data/: README.md
data/glossaries/: figures.csv  idioms.csv  official_titles.csv  places.csv
docs/: index.html
scripts/: download_ecdict.py  fix_links.py  generate_ai_skill_architecture.py  test_render_resume.py  test_render_resume_loop.py  test_render_resume_only.py  test_render_split_merge.py  test_render_webapp.py
webapp/: app.py  prepare_assets.py  requirements.txt
